// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile: Component should render correctly 1`] = `
<Fragment>
  <TextInput
    autoWidth={false}
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <Memo(FormattedMessage)
        defaultMessage="First Name"
        id="userProfile.firstNameLabel"
      />
    }
    name="firstName"
    onChange={[Function]}
    touched={Object {}}
    value="FirstName"
  />
  <TextInput
    autoWidth={false}
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <Memo(FormattedMessage)
        defaultMessage="Last Name"
        id="userProfile.lastNameLabel"
      />
    }
    name="lastName"
    onChange={[Function]}
    touched={Object {}}
    value="LastName"
  />
  <TextInput
    autoWidth={false}
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <Memo(FormattedMessage)
        defaultMessage="Email"
        id="userProfile.emailLabel"
      />
    }
    name="email"
    onChange={[Function]}
    touched={Object {}}
    value="email@example.com"
  />
  <TextInput
    autoWidth={false}
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <Memo(FormattedMessage)
        defaultMessage="Role"
        id="userProfile.roleLabel"
      />
    }
    name="role"
    onChange={[Function]}
    touched={Object {}}
    value="editor"
  />
</Fragment>
`;

exports[`UserProfile: Component should render correctly current user 1`] = `
<Fragment>
  <TextInput
    autoWidth={false}
    checkOnlyErrors={false}
    disabled={false}
    errors={Object {}}
    fullWidth={true}
    isEdit={true}
    label={
      <Memo(FormattedMessage)
        defaultMessage="First Name"
        id="userProfile.firstNameLabel"
      />
    }
    name="firstName"
    onChange={[Function]}
    touched={Object {}}
    value="FirstName"
  />
  <TextInput
    autoWidth={false}
    checkOnlyErrors={false}
    disabled={false}
    errors={Object {}}
    fullWidth={true}
    isEdit={true}
    label={
      <Memo(FormattedMessage)
        defaultMessage="Last Name"
        id="userProfile.lastNameLabel"
      />
    }
    name="lastName"
    onChange={[Function]}
    touched={Object {}}
    value="LastName"
  />
  <TextInput
    autoWidth={false}
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <Memo(FormattedMessage)
        defaultMessage="Email"
        id="userProfile.emailLabel"
      />
    }
    name="email"
    onChange={[Function]}
    touched={Object {}}
    value="email@example.com"
  />
  <TextInput
    autoWidth={false}
    checkOnlyErrors={false}
    disabled={true}
    errors={Object {}}
    fullWidth={true}
    isEdit={false}
    label={
      <Memo(FormattedMessage)
        defaultMessage="Role"
        id="userProfile.roleLabel"
      />
    }
    name="role"
    onChange={[Function]}
    touched={Object {}}
    value="editor"
  />
</Fragment>
`;
